[package]
name = "nufmt"
version = "0.1.0"
edition = "2018"
authors = ["The NuShell Contributors"]
license = "MIT"
description = "Formats nushell extremely fast"
homepage = "https://github.com/nushell/nufmt"
repository = "https://github.com/nushell/nufmt"
readme = "README.md"
keywords = ["nu", "nushell", "formatting", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.53", optional = true, features = ["unicode", "derive"] }
env_logger = "0.11.8"
ignore = "0.4.25"
log = "0.4.29"
nu-ansi-term = "0.50.3"
nu-cmd-lang = "0.109.1"
nu-parser = "0.109.1"
nu-protocol = "0.109.1"
nuon = "0.109.1"
rayon = "1.11.0"
thiserror = "2.0.17"

[dev-dependencies]
criterion = "0.8.1"
rstest = "0.26.1"
tempfile = "3.23.0"

[features]
default = ["bin"]
bin = ["clap"]

[lib]
name = "nu_formatter"
path = "src/lib.rs"

[[bin]]
name = "nufmt"
path = "src/main.rs"
required-features = ["bin"]

[[bench]]
name = "file-format-bench"
harness = false
