[package]
name = "nufmt_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nufmt = { path = "../nufmt" }
clap = { version = "4.3.0", features = ["unicode", "derive"] }
env_logger = "0.10.0"
log = "0.4.17"
